--- a/src/app/page-not-found/page-not-found.component.css
+++ b/src/app/page-not-found/page-not-found.component.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("../../assets/fonts/roboto_regular/Roboto-Regular-webfont.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 #button {
   font-family: "Open Sans", Arial, sans-serif;
   text-decoration: none;
